[gd_scene load_steps=15 format=3 uid="uid://cu6nvv3r8tgkl"]

[ext_resource type="Script" uid="uid://cuxh8wu55linp" path="res://Scenes/UI/InventoryAOI.gd" id="1_fk1j6"]
[ext_resource type="Texture2D" uid="uid://cctoa8i4776qs" path="res://Art/Hell/Enemies/Kle.png" id="1_iac8f"]
[ext_resource type="Script" uid="uid://b1a7tpasthds3" path="res://Scenes/UI/AOI_manager.gd" id="1_poti5"]
[ext_resource type="Script" uid="uid://bvqeuacomwur3" path="res://Scripts/UI/equipment_inventory.gd" id="4_4in3a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbd61"]
bg_color = Color(0.13333334, 0.1254902, 0.20392157, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.13333334, 0.1254902, 0.20392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iac8f"]
bg_color = Color(0.23921569, 0.23137255, 0.32156864, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_poti5"]
bg_color = Color(0.23921569, 0.23137255, 0.32156864, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.13333334, 0.1254902, 0.20392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fk1j6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_fk1j6"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8f5sv"]
bg_color = Color(0.27450982, 0.25882354, 0.42352942, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0vne"]
bg_color = Color(0.27450982, 0.25882354, 0.42352942, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2jd4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjp51"]
bg_color = Color(0.23921569, 0.23137255, 0.32156864, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4in3a"]
bg_color = Color(0.23921569, 0.23137255, 0.32156864, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_poti5")

[node name="Main" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1663.0
offset_top = -923.0
offset_right = -663.0
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dbd61")

[node name="Main" type="HBoxContainer" parent="Main"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Inventory" type="Panel" parent="Main/Main" node_paths=PackedStringArray("default_item_parent")]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_iac8f")
script = ExtResource("1_fk1j6")
default_item_parent = NodePath("Left/Scroll/Grid")

[node name="Left" type="VBoxContainer" parent="Main/Main/Inventory"]
layout_mode = 0
offset_right = 460.0
offset_bottom = 620.0
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Offset" type="Control" parent="Main/Main/Inventory/Left"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Main/Main/Inventory/Left"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="OffsetLeft" type="Control" parent="Main/Main/Inventory/Left/Buttons"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="ButtonsPanel" type="PanelContainer" parent="Main/Main/Inventory/Left/Buttons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_poti5")

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Main/Inventory/Left/Buttons/ButtonsPanel"]
layout_mode = 2

[node name="Button4" type="Button" parent="Main/Main/Inventory/Left/Buttons/ButtonsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_fk1j6")
text = "Button
"

[node name="Button3" type="Button" parent="Main/Main/Inventory/Left/Buttons/ButtonsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_fk1j6")
text = "Button
"

[node name="Button2" type="Button" parent="Main/Main/Inventory/Left/Buttons/ButtonsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_fk1j6")
text = "Button
"

[node name="Button" type="Button" parent="Main/Main/Inventory/Left/Buttons/ButtonsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_fk1j6")
text = "Button
"

[node name="OffsetRight" type="Control" parent="Main/Main/Inventory/Left/Buttons"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Main/Main/Inventory/Left"]
layout_mode = 2
size_flags_vertical = 3

[node name="Grid" type="GridContainer" parent="Main/Main/Inventory/Left/Scroll"]
layout_mode = 2
columns = 4

[node name="InventoryLabel" type="Label" parent="Main/Main/Inventory"]
layout_mode = 0
offset_left = 176.0
offset_top = -18.0
offset_right = 284.0
offset_bottom = 8.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Inventory"
label_settings = SubResource("LabelSettings_fk1j6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPanel" type="Panel" parent="Main/Main"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8f5sv")

[node name="DividerBox" type="HBoxContainer" parent="Main/Main/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="DividerColumn" type="Panel" parent="Main/Main/RightPanel/DividerBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_d0vne")

[node name="Right" type="Control" parent="Main/Main/RightPanel/DividerBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightBox" type="VBoxContainer" parent="Main/Main/RightPanel/DividerBox/Right"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="CharacterPanel" type="Panel" parent="Main/Main/RightPanel/DividerBox/Right/RightBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_o2jd4")

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/CharacterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Stats" type="Panel" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/CharacterPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_tjp51")

[node name="StatsLabel" type="Label" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/CharacterPanel/HBoxContainer/Stats"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = -33.0
offset_right = 30.0
offset_bottom = -7.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Stats"
horizontal_alignment = 1

[node name="StatsScroll" type="ScrollContainer" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/CharacterPanel/HBoxContainer/Stats"]
layout_mode = 0
offset_right = 70.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/CharacterPanel/HBoxContainer/Stats/StatsScroll"]
layout_mode = 2

[node name="CharacterImage" type="TextureRect" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/CharacterPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("1_iac8f")

[node name="Attributes" type="Panel" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/CharacterPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_tjp51")

[node name="Label" type="Label" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/CharacterPanel/HBoxContainer/Attributes"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = -33.0
offset_right = 60.0
offset_bottom = -7.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Attributes"
horizontal_alignment = 1

[node name="Scroll" type="ScrollContainer" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/CharacterPanel/HBoxContainer/Attributes"]
layout_mode = 0
offset_right = 70.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/CharacterPanel/HBoxContainer/Attributes/Scroll"]
layout_mode = 2

[node name="Equipment" type="Panel" parent="Main/Main/RightPanel/DividerBox/Right/RightBox" node_paths=PackedStringArray("ItemParent", "WeaponParent", "default_item_parent")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_4in3a")
script = ExtResource("4_4in3a")
ItemParent = NodePath("Scroll/Grid")
WeaponParent = NodePath("Scroll/Grid")
default_item_parent = NodePath("Scroll/Grid")

[node name="Scroll" type="ScrollContainer" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/Equipment"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="Main/Main/RightPanel/DividerBox/Right/RightBox/Equipment/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterLabel" type="Label" parent="Main/Main/RightPanel/DividerBox/Right"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -351.0
offset_right = 54.0
offset_bottom = -325.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Character"
label_settings = SubResource("LabelSettings_fk1j6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EquipmentLabel" type="Label" parent="Main/Main/RightPanel/DividerBox/Right"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -13.0
offset_right = 54.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Equipment"
label_settings = SubResource("LabelSettings_fk1j6")
horizontal_alignment = 1
vertical_alignment = 1
